@@ -14,7 +14,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="10dp"
-        android:layout_weight="0.8"/>
+        android:layout_weight="0.75"/>
 
     <TextView
         android:id="@+id/count_to_learn_textview"
@@ -22,7 +22,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_weight="0.1"
+        android:layout_weight="0.15"
         android:text="@string/n_a"/>
 
     <ImageView
