@@ -1,1 +1,2 @@
 * Support russian interface.
+* Limits number of cards showing in deck to 200.
